
parity.inspector verbose processing status output is now much more readable.

parity.runtime doesn't allow for more than 3 nested exceptions before doing a hard exit. in previous versions exceptions kept flying until stack space was too low.

parity.inspector has now a much improved memory utilization and overal performance.


parity 1.2.2
------------

colorization of output in all parity executables is now controlled by the output stream type (terminal, file, etc.)

some general cleanup removed dead code.

disable stream buffers on stdout and stderr in windows executables. parity may implement line buffering in the future (which is missing on native windows).


parity 1.2.3
------------

changed the behaviour regarding configuration-set include and library paths; configuration set paths are appended in the order of appearance in the file to the set of command line set paths in their order of appearance on the command line.

after failing to link, stray files are cleaned up properly now.

fixed a bug making the linker find a directory instead of a file while looking up libraries.

added support for reading source files from stdin. any valid source file can be passed via stdin by passing the "-" argument to parity. this only works if parity operates using the GCC type frontend.

parity.inspector has been extended with the --raw option, which allows to output information about a shared library in a more machine readable fashion. initially required to more easely implement the preserve-libs feature of portage for native windows.

added missing extern C in sys/time.h, fixing gettimeofday for C++ users.

made the dynamic loader a little less loud, when it fails to preload a library. this is required, since windows executables fail to preload interix libraries, which use the same variable.


parity 1.2.4
------------

fixed crash with empty archives, and nameless archive members.

added support for visual studio 2010.