@@ -80,16 +80,16 @@ int main(int argc, char** argv)
 			parity::utils::Context::getContext().getIncludePaths().clear();
 			parity::utils::Context::getContext().getLibraryPaths().clear();
 
+			/* ATTENTION: see parity.gnu.gcc.cpp for comments on this: */
+			parity::utils::Context::getContext().getSysIncludePaths().insert(
+				parity::utils::Context::getContext().getSysIncludePaths().begin(),
+				cfgIncludePaths.begin(), cfgIncludePaths.end());
+			parity::utils::Context::getContext().getSysLibraryPaths().insert(
+				parity::utils::Context::getContext().getSysLibraryPaths().begin(),
+				cfgLibraryPaths.begin(), cfgLibraryPaths.end());
+
 			parity::options::UnknownArgumentVector vec;
 			parity::options::CommandLine::process(argc - 1, &argv[1], parity::options::OptionTableMsCl, &vec);
-
-			/* re-enable configuration-set paths. */
-			parity::utils::Context::getContext().getIncludePaths().insert(
-				parity::utils::Context::getContext().getIncludePaths().end(),
-				cfgIncludePaths.begin(), cfgIncludePaths.end());
-			parity::utils::Context::getContext().getLibraryPaths().insert(
-				parity::utils::Context::getContext().getLibraryPaths().end(),
-				cfgLibraryPaths.begin(), cfgLibraryPaths.end());
 
 			if(vec.size() > 0)
 			{
